Исправил названия путей к картинкам

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p>Люблю смотреть сериалы и серфить интернет и рисовать</p>
     <p>Люблю сытно покушать</p>
 
-    <img src="images/tuk.jpg" alt="Это пингвины!">
-    <img src="images/fullhd.jpg" alt="Это чтот-то это">
+    <img src="Images/tuk.jpg" alt="Это пингвины!">
+    <img src="Images/fullhd.jpg" alt="Это чтот-то это">
     <img src="Images/Image.jpg" alt="Красота даже не ФуллХд">
 
     <a href="https://www.youtube.com"> Ссылка на сайт с нашими любимыми видео</a>
