--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p>Люблю смотреть сериалы и серфить интернет и рисовать</p>
     <p>Люблю сытно покушать</p>
 
-    <img src="Images/tuk.jpg" alt="Это пингвины!">
-    <img src="Images/fullhd.jpg" alt="Это чтот-то это">
+    <img src="images/tuk.jpg" alt="Это пингвины!">
+    <img src="images/fullhd.jpg" alt="Это чтот-то это">
     <img src="Images/Image.jpg" alt="Красота даже не ФуллХд">
 
     <a href="https://www.youtube.com"> Ссылка на сайт с нашими любимыми видео</a>
@@ -23,6 +23,8 @@
 
     <h1>На этом у меня все</h1>
     <a href="http://google.com" target="_blank" title="Поисковая система для всех">Google.com</a>
+
+    <a href="https://www.youtube.com/watch?v=fJ9rUzIMcZQ"> "Богемская рапсодия" "Queen" любимая песня
 
     
 </body>
